--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,6 @@ body{
     grid-template-columns: 1fr 5fr;
     grid-template-rows: min-content min-content 1fr;
     height: 100vh;
-    gap: 20px;
     margin: 0;
 }
 
@@ -11,14 +10,39 @@ body{
     display: flex;
     flex-direction: column;
     grid-row: 1 / 4;
+    background-color: aqua;
 }
 
+#search-icon,.profile-space,.project-space{
+    margin-left: 20px;
+}
 
 .top-bar{
     display: flex;
     align-items: center;
     justify-content: space-around;
     height: fit-content;
+    gap: 20px;
+}
+
+#searchbar{
+    border-radius: 8px;
+    display: flex;
+    margin-right: auto;
+    flex: 1;
+}
+
+#bell-icon{
+    margin-left: 20%;
+}
+
+#profile-icon{
+    margin-right: 5%;
+}
+
+#profile-icon > img{
+    height: 60px;
+    width: 60px;
 }
 
 .nav-bar{
@@ -26,19 +50,42 @@ body{
     height: fit-content;
 }
 
+.profile-space,.buttons{
+    margin: 10px;
+}
+
 .profile-space{
     display: flex;
     flex: 1;
 }
 
+img{
+    height: 100px;
+    object-fit: cover;
+    width: 100px;
+    border-radius: 50%;
+}
+
+#profile-info{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: center;
+    margin-left: 10px;
+}
+
 .buttons{
     display: flex;
     align-items: center;
+    margin-right: 20%;
+    gap: 25px;
 }
 
 .content-space{
     display: grid;
     grid-template-columns: 3fr 1fr;
+    column-gap: 5%;
+    background-color: bisque;
 }
 
 .project-space{
@@ -46,6 +93,7 @@ body{
     flex-direction: column;
     grid-row: 1 / 3;
     gap: 10px;
+    margin-top: 20px;
 }
 
 .project-cards{
@@ -57,6 +105,11 @@ body{
 .announcements-space{
     display: flex;
     flex-direction: column;
+    margin-top: 20px;
+}
+
+.announcements-space>div{
+    margin-bottom: 10px;
 }
 
 .announcements-info{
@@ -66,10 +119,19 @@ body{
     justify-content: space-around;
 }
 
+.announcements-info>div>div:first-child{
+    border-bottom: black;
+    border-bottom-style: double;
+}
+
 .trending-space{
     display: flex;
     flex-direction: column;
     grid-column: 2 / 3;
+}
+
+.trending-space>div{
+    margin-bottom: 10px;
 }
 
 .profile{
@@ -77,4 +139,9 @@ body{
     gap:20px;
     flex: 1;
     align-items: center;
+}
+
+.profile>div>img{
+    height: 50px;
+    width: 50px;
 }
