--- a/styles.css
+++ b/styles.css
@@ -11,6 +11,22 @@ body{
     flex-direction: column;
     grid-row: 1 / 4;
     background-color: aqua;
+    font-size: x-large;
+    padding: 20px;
+}
+
+#dashboard{
+    margin-bottom: 10px;
+}
+
+ul{
+    list-style: none;
+}
+
+#list-personal,#list-settings{
+    display: flex;
+    gap: 20px;
+    flex-direction: column;
 }
 
 #search-icon,.profile-space,.project-space{
@@ -50,6 +66,11 @@ body{
     height: fit-content;
 }
 
+.top-bar,.nav-bar{
+    background-color: darksalmon;
+    padding: 10px;
+}
+
 .profile-space,.buttons{
     margin: 10px;
 }
@@ -57,6 +78,10 @@ body{
 .profile-space{
     display: flex;
     flex: 1;
+}
+
+.profile-space>div>img{
+    margin-left: 50px;
 }
 
 img{
@@ -81,19 +106,28 @@ img{
     gap: 25px;
 }
 
+button{
+    height: 35px;
+    width: 80px;
+    border-radius: 12px;
+}
+
 .content-space{
     display: grid;
     grid-template-columns: 3fr 1fr;
-    column-gap: 5%;
-    background-color: bisque;
+    column-gap: 3%;
+    padding: 20px 10px;
+    overflow: scroll;
 }
 
 .project-space{
     display: flex;
     flex-direction: column;
     grid-row: 1 / 3;
+    border-radius: 8px;
     gap: 10px;
-    margin-top: 20px;
+    padding: 20px;
+    margin-top: 10px;
 }
 
 .project-cards{
@@ -102,10 +136,24 @@ img{
     gap: 15px;
 }
 
+.heading{
+    font-weight: bold;
+}
+
+.project-cards>div{
+    border: 2px solid black;
+    border-radius: 12px;
+    padding: 10px;
+    background-color: antiquewhite;
+}
+
 .announcements-space{
     display: flex;
     flex-direction: column;
-    margin-top: 20px;
+    margin-top: 10px;
+    border-radius: 8px;
+    margin-right: 20px;
+    padding: 20px;
 }
 
 .announcements-space>div{
@@ -115,19 +163,43 @@ img{
 .announcements-info{
     display: flex;
     flex: 1;
+    gap: 10px;
     flex-direction: column;
     justify-content: space-around;
+    background-color: antiquewhite;
+    padding: 20px;
+    border-radius: 8px;
+}
+
+.announcements-info>div{
+    padding: 10px;
+    border-bottom: 2px solid black;
+}
+
+.announcements-info>div>div:nth-child(2){
+    overflow: hidden;
+    width: 200px;
+    display: -webkit-box;
+    -webkit-line-clamp: 3;
+    -webkit-box-orient: vertical;
+}
+
+.announcements-info>div:last-child{
+    border-bottom: none;
 }
 
 .announcements-info>div>div:first-child{
-    border-bottom: black;
-    border-bottom-style: double;
+    font-weight: bold;
 }
 
 .trending-space{
     display: flex;
+    border-radius: 8px;
     flex-direction: column;
     grid-column: 2 / 3;
+    margin-right: 20px;
+    padding: 20px;
+    border-radius: 8px;
 }
 
 .trending-space>div{
@@ -137,11 +209,28 @@ img{
 .profile{
     display: flex;
     gap:20px;
-    flex: 1;
     align-items: center;
+}
+
+.profile-cards{
+    display: flex;
+    gap:20px;
+    flex-direction: column;
+    flex: 1;
+    padding: 20px;
+    background-color: antiquewhite;
 }
 
 .profile>div>img{
     height: 50px;
     width: 50px;
+}
+
+.project-space>div:first-child,.trending-space>div:first-child,.announcements-space>div:first-child,#profile-info{
+    font-size: x-large;
+    font-weight: bold;
+}
+
+.profile>div:nth-child(2)>div:first-child{
+    font-weight: bold;
 }
