--- a/styles.css
+++ b/styles.css
@@ -1,26 +1,39 @@
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans&display=swap');
 body{
     display: grid;
     grid-template-columns: 1fr 5fr;
     grid-template-rows: min-content min-content 1fr;
     height: 100vh;
     margin: 0;
+    font-family: 'Open Sans', sans-serif;;
 }
 
 .sidebar{
     display: flex;
     flex-direction: column;
     grid-row: 1 / 4;
-    background-color: aqua;
+    background-color: #38bdf8;
     font-size: x-large;
     padding: 20px;
 }
 
 #dashboard{
+    display: flex;
+    align-items: center;
+    gap: 10px;
     margin-bottom: 10px;
+    font-size: larger;
+    font-weight: bold;
 }
 
 ul{
     list-style: none;
+}
+
+li>div{
+    display: flex;
+    gap:10px;
+    align-items: center;
 }
 
 #list-personal,#list-settings{
@@ -41,11 +54,20 @@ ul{
     gap: 20px;
 }
 
+#profile-info>div:first-child{
+    font-size: medium;
+}
+
+#search-icon>svg{
+    transform: scale(1.5);
+}
+
 #searchbar{
     border-radius: 8px;
     display: flex;
     margin-right: auto;
     flex: 1;
+    padding: 10px;
 }
 
 #bell-icon{
@@ -67,7 +89,7 @@ ul{
 }
 
 .top-bar,.nav-bar{
-    background-color: darksalmon;
+    background-color: #f8fafc;
     padding: 10px;
 }
 
@@ -108,8 +130,13 @@ img{
 
 button{
     height: 35px;
+    background-color: #38bdf8;
     width: 80px;
     border-radius: 12px;
+    border: none;
+    font-weight: bold;
+    font-size: medium;
+    color: white;
 }
 
 .content-space{
@@ -118,6 +145,7 @@ button{
     column-gap: 3%;
     padding: 20px 10px;
     overflow: scroll;
+    background-color: #fee2e2;
 }
 
 .project-space{
@@ -132,8 +160,8 @@ button{
 
 .project-cards{
     display: grid;
-    grid-template-columns: repeat(auto-fit,minmax(200px,1fr));
-    gap: 15px;
+    grid-template-columns: repeat(auto-fit,minmax(250px,1fr));
+    gap: 50px;
 }
 
 .heading{
@@ -141,17 +169,26 @@ button{
 }
 
 .project-cards>div{
-    border: 2px solid black;
+    border-left: 10px solid red;
     border-radius: 12px;
-    padding: 10px;
-    background-color: antiquewhite;
+    padding: 15px;
+    background-color: #f8fafc;
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+}
+
+.icons{
+    display: flex;
+    justify-content: flex-end;
+    gap: 20px;
 }
 
 .announcements-space{
     display: flex;
     flex-direction: column;
     margin-top: 10px;
-    border-radius: 8px;
+    border-radius: 12px;
     margin-right: 20px;
     padding: 20px;
 }
@@ -165,9 +202,9 @@ button{
     flex: 1;
     gap: 10px;
     flex-direction: column;
-    justify-content: space-around;
-    background-color: antiquewhite;
+    background-color: #f8fafc;
     padding: 20px;
+    justify-content: space-evenly;
     border-radius: 8px;
 }
 
@@ -199,11 +236,15 @@ button{
     grid-column: 2 / 3;
     margin-right: 20px;
     padding: 20px;
-    border-radius: 8px;
+    border-radius: 12px;
 }
 
 .trending-space>div{
     margin-bottom: 10px;
+}
+
+.announcements-space,.trending-space{
+    min-width: 320px;
 }
 
 .profile{
@@ -216,9 +257,11 @@ button{
     display: flex;
     gap:20px;
     flex-direction: column;
-    flex: 1;
+    flex:1;
+    justify-content: space-evenly;
     padding: 20px;
-    background-color: antiquewhite;
+    background-color: #f8fafc;
+    border-radius: 12px;
 }
 
 .profile>div>img{
